objects/tmpBranches__c.object
<CustomObject>
    <fields>
        <fullName>Br_Add__c</fullName>
        <label>Br_Add</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Br_Address__c</fullName>
        <label>Br_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Br_Cancel__c</fullName>
        <label>Br_Cancel</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Br_City__c</fullName>
        <label>Br_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Br_ContactPerson__c</fullName>
        <label>Br_ContactPerson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Br_Phone__c</fullName>
        <label>Br_Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Br_State__c</fullName>
        <label>Br_State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Br_Zip__c</fullName>
        <label>Br_Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Br_county__c</fullName>
        <label>Br_county</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Br_entered__c</fullName>
        <label>Br_entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pri_Licname__c</fullName>
        <label>Pri_Licname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Regno__c</fullName>
        <label>Pri_Regno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countbranch__c</fullName>
        <label>countbranch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>tmpBranches</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pri_Licname__c</columns>
        <columns>Pri_Regno__c</columns>
        <columns>Br_Address__c</columns>
        <columns>Br_City__c</columns>
        <columns>Br_county__c</columns>
        <columns>Br_State__c</columns>
        <columns>Br_Zip__c</columns>
        <columns>Br_Phone__c</columns>
        <columns>Br_ContactPerson__c</columns>
        <columns>Br_Add__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Branches</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tmpBranches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>